--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 node_modules
+.env
+.nuxt/components.d.ts
+.nuxt/dev/index.mjs
+.nuxt/dev/index.mjs.map
+.nuxt/imports.d.ts
+.nuxt/manifest/latest.json
+.nuxt/manifest/meta/dev.json
+.nuxt/nitro.json
+.nuxt/nuxt.d.ts
+.nuxt/tsconfig.json
+.nuxt/types/build.d.ts
+.nuxt/types/imports.d.ts
+.nuxt/types/layouts.d.ts
+.nuxt/types/middleware.d.ts
+.nuxt/types/nitro-routes.d.ts
+.nuxt/types/plugins.d.ts
+.nuxt/types/middleware.d.ts
