--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "mongodb": "^6.9.0",
     "nuxt": "^3.13.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
